chore: Updat various configurations for Ubuntu machine

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -25,6 +25,17 @@ bind -n M-k next-window
 bind -n M-h select-pane -t :.-                                                                                                                                                               
 bind -n M-l select-pane -t :.+                                                                                                                                                               
 
+bind-key -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe "xclip -selection clipboard -i" \; send -X clear-selection
+
 # reload config file
 bind-key r source-file ~/.tmux.conf \; display-message "~/.tmux.conf reloaded"
 bind-key M split-window -h "vim ~/.tmux.conf"
+
+
+# Plugins
+set -g @plugin 'dracula/tmux'
+set -g @plugin 'tmux-plugins/tmux-yank' 
+#set -g @yank_selection 'primary'
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
