--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -1,7 +1,22 @@
 [core]
 	excludesFile = ~/.gitignore
+	pager = diff-so-fancy | less --tabs=4 -RFX
 [user]
 	name = Gourav Chawla
 	email = gouravchawla@live.com
 [credential]
 	helper = cache
+[color]
+	ui = true
+[color "diff-highlight"]
+	oldNormal = red bold
+	oldHighlight = red bold 52
+	newNormal = green bold
+	newHighlight = green bold 22
+[color "diff"]
+	meta = 11
+	frag = magenta bold
+	commit = yellow bold
+	old = red bold
+	new = green bold
+	whitespace = red reverse
